--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "bootstrap": "^5.2.3",
+    "react": "^18.0.0",
+    "react-bootstrap": "^2.6.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.4.4",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
